--- a/index.html
+++ b/index.html
@@ -26,9 +26,22 @@
                 is
                 terrible at communicating with others. Hitohito Tadano is your average high school boy.</p>
             <a class="link-button" target="_blank" href="https://www.facebook.com/azim7islamm">Hire Me</a>
-        </div>
+        </div class="half-width">
         <div class="half-width">
             <img src="komi-san/pic1.png" alt="pic of komi">
+        </div>
+    </section>
+    <section class="komi-smile">
+        <div class="half-width">
+            <img src="komi-san/smilee.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Wear Your Smile</h1>
+            <h2>Become A Social Person</h2>
+            <p>Studies have shown that smiling releases endorphins, other natural painkillers, and serotonin. 9
+                Together, these brain chemicals make us feel good from head to toe. Not only do they elevate your mood,
+                but they also relax your body and reduce physical pain. Smiling is a natural drug</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
 </body>
