--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goku's Protfolio</title>
+    <title>komi's World</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="change-color">Komi San's</span> World!</h1>
@@ -26,12 +26,12 @@
                 is
                 terrible at communicating with others. Hitohito Tadano is your average high school boy.</p>
             <a class="link-button" target="_blank" href="https://www.facebook.com/azim7islamm">Hire Me</a>
-        </div class="half-width">
+        </div>
         <div class="half-width">
             <img src="komi-san/pic1.png" alt="pic of komi">
         </div>
     </section>
-    <section class="komi-smile">
+    <section class="komi-smile flexible-container">
         <div class="half-width">
             <img src="komi-san/smilee.png" alt="">
         </div>
@@ -42,6 +42,38 @@
                 Together, these brain chemicals make us feel good from head to toe. Not only do they elevate your mood,
                 but they also relax your body and reduce physical pain. Smiling is a natural drug</p>
             <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="exp">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1>
+                    Full Stack Web Developer
+                </h1>
+                <h3 class="change-color">
+                    2022 Present Pro Level Developer
+                </h3>
+                <p>
+                    I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
+            </div>
+            <div class="half-width">
+                <h1>
+                    Baby Developer
+                </h1>
+                <h3 class="change-color">
+                    2021-2022 Baby Level Learner
+                </h3>
+                <p>
+                    They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
         </div>
     </section>
 </body>
