--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
     <section class="exp">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="half-width">
-                <h1>
+            <div id="web-exp" class="exp-itm">
+                <h2>
                     Full Stack Web Developer
-                </h1>
-                <h3 class="change-color">
+                </h2>
+                <h3>
                     2022 Present Pro Level Developer
                 </h3>
                 <p>
@@ -61,21 +61,27 @@
                     JS. I even know the deployment, server and security. I will give you 100% web solution.
                 </p>
             </div>
-            <div class="half-width">
-                <h1>
+            <div id="web-xp" class="exp-itm">
+                <h2>
                     Baby Developer
-                </h1>
-                <h3 class="change-color">
+                </h2>
+                <h3">
                     2021-2022 Baby Level Learner
-                </h3>
-                <p>
-                    They didn't offer me a job. But I made myself as a remove web developer. I made their website and
-                    showed
-                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
-                </p>
+                    </h3>
+                    <p>
+                        They didn't offer me a job. But I made myself as a remove web developer. I made their website
+                        and
+                        showed
+                        it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                    </p>
             </div>
         </div>
     </section>
+    <footer>
+        <p>
+            ©Azharul islam 2022, a programming hero army.
+        </p>
+    </footer>
 </body>
 
 </html>
